Proyecto HTML y CSS responsive - Día 14

--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
       <p>Puedes visitar mi <a href="https://github.com/stevenga26" target="_blank">perfil de GitHub</a> para ver algunos ejemplos.</p>
       <p><a href="#inicio">⬆️ Volver al inicio</a></p>
     </section>
+    <section id="galeria">
+  <h2>Mi galería de proyectos</h2>
+  <div class="contenedor">
+    <div class="tarjeta">Proyecto 1</div>
+    <div class="tarjeta">Proyecto 2</div>
+    <div class="tarjeta">Proyecto 3</div>
+  </div>
+</section>
 
     <section id="contacto">
       <h2>Contacto</h2>
