Actualizacion con pagina de contacto y boton

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <a href="index.html">Inicio</a> |
       <a href="sobre_mi.html">Sobre mí</a> |
       <a href="#proyectos">Proyectos</a> |
-      <a href="#contacto">Contacto</a>
+      <a href="contacto.html">Contacto</a>
     </nav>
   </header>
 
@@ -58,6 +58,10 @@
     <section id="contacto">
       <h2>Contacto</h2>
       <p>Podés escribirme a <a href="mailto:stevenga26@icloud.com">stevenga26@icloud.com</a></p>
+      <div class="boton-contacto">
+        <a href="contacto.html" class="btn">📩 Ir al formulario de contacto</a>
+      </div>
+
       <p><a href="#inicio">⬆️ Volver al inicio</a></p>
     </section>
   </main>
